# mentor-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_PLAN.md  PRD.md  README.md  TECHNICAL_DESIGN.md  config.yaml.example  pyproject.toml
.github/workflows/: publish.yml  test.yml
evals/: __init__.py  metrics.py  run_eval.py
evals/personas/sample_mentor/: persona.json
evals/test_cases/: academic_qa.json  product_qa.json  tech_qa.json
examples/sample-mentor-docs/: 01-product-thinking.md  02-user-research.md  03-feedback-sessions.md  04-business-model.md  05-growth-methodology.md  README.md
src/mentor_skill/: __init__.py  cli.py  config.py
src/mentor_skill/analyzers/: __init__.py  cleaner.py  extractor.py  quality.py  stats.py
src/mentor_skill/collectors/: __init__.py  base.py  dingtalk.py  feishu.py  markdown.py  pdf.py  wechat.py
src/mentor_skill/distiller/: __init__.py  engine.py
src/mentor_skill/distiller/layers/: __init__.py  base.py  l1_identity.py  l2_knowledge.py  l3_thinking.py  l4_communication.py  l5_emotion.py  l6_mentorship.py  l7_apprentice_memory.py
src/mentor_skill/generator/: __init__.py  claude_skill.py  cursor_rule.py  openclaw_skill.py  persona_files.py  skill_md.py  validators.py
src/mentor_skill/llm/: __init__.py  base.py
src/mentor_skill/models/: __init__.py  persona.py  raw_message.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_collectors.py  test_distiller.py  test_generator.py
